--- a/tempeting_handlebars/views/layouts/main.handlebars
+++ b/tempeting_handlebars/views/layouts/main.handlebars
@@ -6,6 +6,11 @@
     <title>{{title}}</title>
 </head>
 <body>
+    <ul>
+    <li><a href="/">Home</a></li>
+    <li><a href="products">Products</a></li>
+    <li><a href="news">News</a></li>
+  </ul>
     {{{body}}}
 </body>
 </html>
